--- a/inicio.html
+++ b/inicio.html
@@ -24,7 +24,7 @@
     </center>
 
     <!-- Botões -->
-    <button class="btn btn-outline-primary position-absolute top-50 start-50 translate-middle">Um botão pra alguma coisa</button>
+    <button class="btn btn-outline-primary position-absolute top-50 start-50 translate-middle">Um botão Editado no Notebook</button>
     
     <button class="botao">Um botão pra alguma coisa</button>
 
